--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>tonto</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -40,18 +39,52 @@
 			<optional>true</optional>
 		</dependency>
 
+
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-distribution -->
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.owlapi/org.semanticweb.hermit -->
+		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>org.semanticweb.hermit</artifactId>
+			<version>1.4.1.513</version>
+			<scope>test</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>5.1.3</version>
+			<version>5.1.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-api -->
+		<!--<dependency>-->
+			<!--<groupId>net.sourceforge.owlapi</groupId>-->
+			<!--<artifactId>owlapi-api</artifactId>-->
+			<!--<version>5.1.4</version>-->
+		<!--</dependency>-->
+		<!--&lt;!&ndash; https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-apibinding &ndash;&gt;-->
+		<!--<dependency>-->
+			<!--<groupId>net.sourceforge.owlapi</groupId>-->
+			<!--<artifactId>owlapi-apibinding</artifactId>-->
+			<!--<version>5.1.4</version>-->
+		<!--</dependency>-->
+		<!--&lt;!&ndash; https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-impl &ndash;&gt;-->
+		<!--<dependency>-->
+			<!--<groupId>net.sourceforge.owlapi</groupId>-->
+			<!--<artifactId>owlapi-impl</artifactId>-->
+			<!--<version>5.1.4</version>-->
+		<!--</dependency>-->
+		<!--&lt;!&ndash; https://mvnrepository.com/artifact/net.sourceforge.owlapi/owlapi-parsers &ndash;&gt;-->
+		<!--<dependency>-->
+			<!--<groupId>net.sourceforge.owlapi</groupId>-->
+			<!--<artifactId>owlapi-parsers</artifactId>-->
+			<!--<version>5.1.4</version>-->
+		<!--</dependency>-->
+
 
 	</dependencies>
 
@@ -63,6 +96,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
